<resources>
    <string name="notification_content">"Today's steps are &#160;"</string>
    <string name="app_name">Pedometer</string>
    <string name="btn_cancel">Cancle</string>
    <string name="btn_confirm_ok">Ok</string>
    <string name="daily_average">Daily average:</string>
    <string name="distance">Distance</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="profile_description">To ensure accuracy, please enter accurate information. We will never disclose this information to third parties.</string>
    <string name="gender_desc">Used to calculate the step size</string>
    <string name="gender_description">Used to calculate calories and steps.</string>
    <string name="goal_ins_title">Step Goal</string>
    <string name="goal_with_value">Goal: %s</string>
    <string name="height">Height</string>
    <string name="height_desc">Used to calculate the distance and speed</string>
    <string name="high">High</string>
    <string name="history">Timeline</string>
    <string name="kcal">Kcal</string>
    <string name="male">Male</string>
    <string name="month">Month</string>
    <string name="more">More</string>
    <string name="next">Next</string>
    <string name="pause">Pause</string>
    <string name="pedometer_preferences">Preference Settings</string>
    <string name="pg_permission_protect_app">Protected apps</string>
    <string name="pg_permission_dialog_sub_title">To make sure %s works properly</string>
    <string name="pg_permission_dialog_title">Permission Required</string>
    <string name="profile">My Profile</string>
    <string name="report">Report</string>
    <string name="resume">Resume</string>
    <string name="select_gender">Select Gender</string>
    <string name="setting">Settings</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="speed">Speed</string>
    <string name="start">Start</string>
    <string name="step">Step</string>
    <string name="step_counter_notification">Notification Bar</string>
    <string name="steps">Steps</string>
    <string name="tab_calorie">Calorie</string>
    <string name="tab_step">Step</string>
    <string name="this_week">This week</string>
    <string name="time">Time</string>
    <string name="time_hour">h</string>
    <string name="time_minute">m</string>
    <string name="time_second">s</string>
    <string name="today">Today</string>
    <string name="unit_cm">cm</string>
    <string name="unit_feet">ft</string>
    <string name="unit_inch">in</string>
    <string name="unit_kcal">Kcal</string>
    <string name="unit_kg">kg</string>
    <string name="unit_km">Km</string>
    <string name="unit_km_h">Km/H</string>
    <string name="unit_lbs">lbs</string>
    <string name="unit_miles">Mile</string>
    <string name="unit_mph">MPH</string>
    <string name="unit_type">Metric &amp; Imperial Unit</string>
    <string name="walking_time">Walking Time</string>
    <string name="week">Week</string>
    <string name="weekly_steps">Weekly Steps</string>
    <string name="weight">Weight</string>
    <string name="weight_desc">Used to calculate calories</string>


    <string name="update_settings">UPDATE SETTINGS</string>
    <string name="exercise">Exercise</string>
    <string name="back_toast" >Press again to exit the program</string>
    <string name="enable">Enable</string>
    <string name="confirm">confirm</string>
    <string name="woluld_you_like_to_exit">Would you like to exit %s ?</string>
    <string name="cancel">cancel</string>
    <string name="morning_dialog_content">It\'s time to start the morning run.</string>
    <string name="stepgoal_dialog_content">Walking %s steps , go and see the buring calories.</string>
    <string name="exercise_dialog_content">When it\'s time for exercise start exercising.</string>
    <string name="detail">DETAIL</string>
    <string name="go_exercising">GO Exercising</string>

</resources>
