<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg2"
    android:paddingTop="10dp"

    tools:context="com.baisi.spedometer.activity.SportStepFormalActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/backimage_rel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp">
            <ImageView
                android:id="@+id/backimage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/md_nav_back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/backimage_rel"
            android:text="@string/exercise"
            android:textColor="@color/pedo_step_tv"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:scrollbars="none"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/km_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="0000"
                    android:textColor="@color/new_main_pause"
                    android:textSize="130sp" />

                <TextView
                    android:id="@+id/km_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_km"
                    android:textColor="@color/new_main_pause"
                    android:textSize="30sp" />


                <com.fashare.timer_view.DigitalTimerView
                    android:id="@+id/dtv_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp" />
                <!--<TextView-->
                <!--android:id="@+id/time_count"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="sfasdfafd"-->
                <!--android:textSize="30sp"-->
                <!--android:textColor="@color/pedo_goal_tv"/>-->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/unit_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <com.baisi.spedometer.view.MixLinearLayout
                    android:id="@+id/calorle_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:centerimage_height="@dimen/d30dp"
                    app:centerimage_src="@mipmap/cal"
                    app:centerimage_widh="@dimen/d30dp"

                    app:textunit_color="@color/pedo_step_tv"
                    app:textunit_size="14sp"
                    app:textunit_text="@string/kcal"
                    app:textvalue_color="@color/pedo_step_tv"
                    app:textvalue_size="30sp"
                    app:textvalue_text="0">

                </com.baisi.spedometer.view.MixLinearLayout>

                <com.baisi.spedometer.view.MixLinearLayout
                    android:id="@+id/speed_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:centerimage_height="@dimen/d30dp"
                    app:centerimage_src="@mipmap/speed"
                    app:centerimage_widh="@dimen/d30dp"

                    app:textunit_color="@color/pedo_step_tv"
                    app:textunit_size="14sp"
                    app:textunit_text="@string/time_minute"
                    app:textvalue_color="@color/pedo_step_tv"
                    app:textvalue_size="30sp"
                    app:textvalue_text="0">

                </com.baisi.spedometer.view.MixLinearLayout>

                <com.baisi.spedometer.view.MixLinearLayout
                    android:id="@+id/step_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:centerimage_height="@dimen/d30dp"
                    app:centerimage_src="@mipmap/step"
                    app:centerimage_widh="@dimen/d30dp"
                    app:textunit_color="@color/pedo_step_tv"
                    app:textunit_size="14sp"
                    app:textunit_text="@string/step"
                    app:textvalue_color="@color/pedo_step_tv"
                    app:textvalue_size="30sp"
                    app:textvalue_text="0"></com.baisi.spedometer.view.MixLinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/animator_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/unit_format"
                android:layout_marginTop="60dp">

                <ImageView
                    android:id="@+id/stop"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/end"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/pause"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/running" />


            </RelativeLayout>

            <FrameLayout
                android:layout_below="@+id/animator_rel"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                ></FrameLayout>
        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/ad_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

    </FrameLayout>

</RelativeLayout>
